--- a/StockMarket/pom.xml
+++ b/StockMarket/pom.xml
@@ -34,6 +34,10 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		</dependency> 
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
