--- a/StockMarket/pom.xml
+++ b/StockMarket/pom.xml
@@ -50,7 +50,7 @@
 				<dependency>
 	        <groupId>javax.validation</groupId>
 	        <artifactId>validation-api</artifactId>
-	        <version>2.0.1.Final</version>
+	        <!-- <version>2.0.1.Final</version> -->
 		    <scope>Provided</scope>
 	    </dependency>
 		<dependency>
