--- a/StockMarket/src/main/resources/application.properties
+++ b/StockMarket/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # CONTAINER
 server.port=8767
-#debug=true
+debug=true
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/stockmarketdb
